--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,3 +7,10 @@ server:
   port: 8880
   servlet:
     context-path: /springBootDev
+spring:
+  #数据库连接
+  datasource:
+    url: jdbc:mysql://localhost:3306/springboot_student?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.jdbc.Driver
